--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,13 +47,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Stats\n",
+      "Roughly the number of unique words: 11492\n",
+      "Number of scenes: 262\n",
+      "Average number of sentences in each scene: 15.251908396946565\n",
+      "Number of lines: 4258\n",
+      "Average number of words in each line: 11.50164396430249\n",
+      "\n",
+      "The sentences 0 to 10:\n",
+      "\n",
+      "Moe_Szyslak: (INTO PHONE) Moe's Tavern. Where the elite meet to drink.\n",
+      "Bart_Simpson: Eh, yeah, hello, is Mike there? Last name, Rotch.\n",
+      "Moe_Szyslak: (INTO PHONE) Hold on, I'll check. (TO BARFLIES) Mike Rotch. Mike Rotch. Hey, has anybody seen Mike Rotch, lately?\n",
+      "Moe_Szyslak: (INTO PHONE) Listen you little puke. One of these days I'm gonna catch you, and I'm gonna carve my name on your back with an ice pick.\n",
+      "Moe_Szyslak: What's the matter Homer? You're not your normal effervescent self.\n",
+      "Homer_Simpson: I got my problems, Moe. Give me another one.\n",
+      "Moe_Szyslak: Homer, hey, you should not drink to forget your problems.\n",
+      "Barney_Gumble: Yeah, you should only drink to enhance your social skills.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "view_sentence_range = (0, 10)\n",
     "\n",
@@ -101,13 +126,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import problem_unittests as tests\n",
@@ -119,7 +152,10 @@
     "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    vocab = set(text)\n",
+    "    vocab_to_int = {c:i for i, c in enumerate(vocab)}\n",
+    "    int_to_vocab = {i:c for i, c in enumerate(vocab)}\n",
+    "    return vocab_to_int, int_to_vocab\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -155,13 +191,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def token_lookup():\n",
     "    \"\"\"\n",
@@ -169,7 +213,19 @@
     "    :return: Tokenize dictionary where the key is the punctuation and the value is the token\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    dict_punctuation = {\n",
+    "        '.':'||Period||',\n",
+    "        ',':'||Comma||',\n",
+    "        '\"':'||Quotation_Mark||',\n",
+    "        ';':'||Semicolon||',\n",
+    "        '!':'||Exclamation_Mark||',\n",
+    "        '?':'||Question_Mark||',\n",
+    "        '(':'||Left_Parenthesis||',\n",
+    "        ')':'||Right_Parenthesis||',\n",
+    "        '--':'||Dash||',\n",
+    "        '\\n':'||Return||'\n",
+    "    }\n",
+    "    return dict_punctuation\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -190,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -218,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -257,11 +313,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 1.0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Abdul\\Anaconda3\\envs\\dlnd-tf-lab\\lib\\site-packages\\ipykernel\\__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -296,13 +367,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_inputs():\n",
     "    \"\"\"\n",
@@ -310,7 +389,10 @@
     "    :return: Tuple (input, targets, learning rate)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None\n",
+    "    inputs = tf.placeholder(tf.int32, [None, None], name = 'input')\n",
+    "    targets = tf.placeholder(tf.int32, [None, None], name = 'targets')\n",
+    "    learning_rate = tf.placeholder(tf.float32, name = 'learning_rate')\n",
+    "    return inputs, targets, learning_rate\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -337,14 +419,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
+    "lstm_layers = 1\n",
+    "keep_prob = 1\n",
+    "\n",
     "def get_init_cell(batch_size, rnn_size):\n",
     "    \"\"\"\n",
     "    Create an RNN Cell and initialize it.\n",
@@ -353,7 +446,12 @@
     "    :return: Tuple (cell, initialize state)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+    "    drop = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([drop] * lstm_layers)\n",
+    "    cell_state = cell.zero_state(batch_size, tf.float32)\n",
+    "    cell_state = tf.identity(cell_state, name = 'initial_state')\n",
+    "    return cell, cell_state\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -375,13 +473,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_embed(input_data, vocab_size, embed_dim):\n",
     "    \"\"\"\n",
@@ -392,7 +498,9 @@
     "    :return: Embedded input.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    embedding = tf.Variable(tf.random_uniform((vocab_size, embed_dim), -1, 1))\n",
+    "    embed = tf.nn.embedding_lookup(embedding, input_data)\n",
+    "    return embed\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -418,13 +526,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_rnn(cell, inputs):\n",
     "    \"\"\"\n",
@@ -434,7 +550,9 @@
     "    :return: Tuple (Outputs, Final State)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    outputs, final_state = tf.nn.dynamic_rnn(cell, inputs, dtype=tf.float32)\n",
+    "    final_state = tf.identity(final_state, name = 'final_state')\n",
+    "    return outputs, final_state\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -461,13 +579,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_nn(cell, rnn_size, input_data, vocab_size):\n",
     "    \"\"\"\n",
@@ -479,7 +605,10 @@
     "    :return: Tuple (Logits, FinalState)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    embed = get_embed(input_data, vocab_size, rnn_size)\n",
+    "    outputs, final_state = build_rnn(cell, embed)\n",
+    "    logits = tf.contrib.layers.fully_connected(outputs, vocab_size)\n",
+    "    return logits, final_state\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -526,13 +655,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_batches(int_text, batch_size, seq_length):\n",
     "    \"\"\"\n",
@@ -543,7 +681,21 @@
     "    :return: Batches as a Numpy array\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    batch_count = len(int_text)//(batch_size * seq_length)\n",
+    "    counter = (batch_size * seq_length)\n",
+    "    final = []\n",
+    "    row = []\n",
+    "    for i in range(batch_count):\n",
+    "        x = int_text[i * counter : (i + 1) * counter]\n",
+    "        x = np.reshape(x, (batch_size, seq_length))\n",
+    "        y = int_text[(i * counter) + 1 : ((i + 1) * counter) + 1]\n",
+    "        y = np.reshape(y, (batch_size, seq_length))\n",
+    "        row = np.array([x,y])\n",
+    "        final.append(row)\n",
+    "    return np.array(final)\n",
+    "\n",
+    "# test = get_batches([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15], 2, 3)\n",
+    "# print(test)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -573,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -582,17 +734,17 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = None\n",
+    "num_epochs = 10\n",
     "# Batch Size\n",
-    "batch_size = None\n",
+    "batch_size = 64\n",
     "# RNN Size\n",
-    "rnn_size = None\n",
+    "rnn_size = 100\n",
     "# Sequence Length\n",
-    "seq_length = None\n",
+    "seq_length = 10\n",
     "# Learning Rate\n",
-    "learning_rate = None\n",
+    "learning_rate = 0.1\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = None\n",
+    "show_every_n_batches = 64\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -613,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -665,13 +817,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch   0 Batch    0/107   train_loss = 8.820\n",
+      "Epoch   0 Batch   64/107   train_loss = 6.202\n",
+      "Epoch   1 Batch   21/107   train_loss = 5.999\n",
+      "Epoch   1 Batch   85/107   train_loss = 6.118\n",
+      "Epoch   2 Batch   42/107   train_loss = 5.997\n",
+      "Epoch   2 Batch  106/107   train_loss = 5.801\n",
+      "Epoch   3 Batch   63/107   train_loss = 5.792\n",
+      "Epoch   4 Batch   20/107   train_loss = 5.499\n",
+      "Epoch   4 Batch   84/107   train_loss = 6.188\n",
+      "Epoch   5 Batch   41/107   train_loss = 5.841\n",
+      "Epoch   5 Batch  105/107   train_loss = 5.646\n",
+      "Epoch   6 Batch   62/107   train_loss = 6.031\n",
+      "Epoch   7 Batch   19/107   train_loss = 5.731\n",
+      "Epoch   7 Batch   83/107   train_loss = 5.906\n",
+      "Epoch   8 Batch   40/107   train_loss = 5.398\n",
+      "Epoch   8 Batch  104/107   train_loss = 5.842\n",
+      "Epoch   9 Batch   61/107   train_loss = 5.845\n",
+      "Model Trained and Saved\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -719,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -746,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -786,13 +963,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_tensors(loaded_graph):\n",
     "    \"\"\"\n",
@@ -801,7 +986,7 @@
     "    :return: Tuple (InputTensor, InitialStateTensor, FinalStateTensor, ProbsTensor)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None, None\n",
+    "    return loaded_graph.get_tensor_by_name('input:0'), loaded_graph.get_tensor_by_name('initial_state:0'), loaded_graph.get_tensor_by_name('final_state:0'), loaded_graph.get_tensor_by_name('probs:0')\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -823,13 +1008,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def pick_word(probabilities, int_to_vocab):\n",
     "    \"\"\"\n",
@@ -839,7 +1032,7 @@
     "    :return: String of the predicted word\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    return int_to_vocab.get(np.argmax(probabilities))\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -861,13 +1054,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moe_szyslak:() i don't you got a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:(to give you don't have a.\n",
+      "homer_simpson:\n"
+     ]
+    }
+   ],
    "source": [
     "gen_length = 200\n",
     "# homer_simpson, moe_szyslak, or Barney_Gumble\n",
@@ -938,7 +1159,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -946,10 +1167,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
-  },
-  "widgets": {
-   "state": {},
-   "version": "1.1.2"
   }
  },
  "nbformat": 4,
