--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -322,14 +322,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Abdul\\Anaconda3\\envs\\dlnd-tf-lab\\lib\\site-packages\\ipykernel\\__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
+      "TensorFlow Version: 1.0.0\n",
+      "Default GPU Device: /gpu:0\n"
      ]
     }
    ],
@@ -367,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -419,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -453,7 +447,6 @@
     "    cell_state = tf.identity(cell_state, name = 'initial_state')\n",
     "    return cell, cell_state\n",
     "\n",
-    "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
     "\"\"\"\n",
@@ -473,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -526,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -579,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -595,6 +588,8 @@
     }
    ],
    "source": [
+    "embed_dim = 256\n",
+    "\n",
     "def build_nn(cell, rnn_size, input_data, vocab_size):\n",
     "    \"\"\"\n",
     "    Build part of the neural network\n",
@@ -605,9 +600,9 @@
     "    :return: Tuple (Logits, FinalState)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    embed = get_embed(input_data, vocab_size, rnn_size)\n",
+    "    embed = get_embed(input_data, vocab_size, embed_dim)\n",
     "    outputs, final_state = build_rnn(cell, embed)\n",
-    "    logits = tf.contrib.layers.fully_connected(outputs, vocab_size)\n",
+    "    logits = tf.contrib.layers.fully_connected(outputs, vocab_size, weights_initializer=tf.truncated_normal_initializer(stddev=0.1))\n",
     "    return logits, final_state\n",
     "\n",
     "\n",
@@ -655,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -725,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -734,17 +729,17 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = 10\n",
+    "num_epochs = 500\n",
     "# Batch Size\n",
-    "batch_size = 64\n",
+    "batch_size = 1024\n",
     "# RNN Size\n",
-    "rnn_size = 100\n",
+    "rnn_size = 512\n",
     "# Sequence Length\n",
-    "seq_length = 10\n",
+    "seq_length = 65\n",
     "# Learning Rate\n",
-    "learning_rate = 0.1\n",
+    "learning_rate = 0.01\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = 64\n",
+    "show_every_n_batches = 10\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -765,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -817,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -828,23 +823,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/107   train_loss = 8.820\n",
-      "Epoch   0 Batch   64/107   train_loss = 6.202\n",
-      "Epoch   1 Batch   21/107   train_loss = 5.999\n",
-      "Epoch   1 Batch   85/107   train_loss = 6.118\n",
-      "Epoch   2 Batch   42/107   train_loss = 5.997\n",
-      "Epoch   2 Batch  106/107   train_loss = 5.801\n",
-      "Epoch   3 Batch   63/107   train_loss = 5.792\n",
-      "Epoch   4 Batch   20/107   train_loss = 5.499\n",
-      "Epoch   4 Batch   84/107   train_loss = 6.188\n",
-      "Epoch   5 Batch   41/107   train_loss = 5.841\n",
-      "Epoch   5 Batch  105/107   train_loss = 5.646\n",
-      "Epoch   6 Batch   62/107   train_loss = 6.031\n",
-      "Epoch   7 Batch   19/107   train_loss = 5.731\n",
-      "Epoch   7 Batch   83/107   train_loss = 5.906\n",
-      "Epoch   8 Batch   40/107   train_loss = 5.398\n",
-      "Epoch   8 Batch  104/107   train_loss = 5.842\n",
-      "Epoch   9 Batch   61/107   train_loss = 5.845\n",
+      "Epoch   0 Batch    0/1   train_loss = 8.830\n",
+      "Epoch  10 Batch    0/1   train_loss = 6.021\n",
+      "Epoch  20 Batch    0/1   train_loss = 5.489\n",
+      "Epoch  30 Batch    0/1   train_loss = 5.028\n",
+      "Epoch  40 Batch    0/1   train_loss = 4.574\n",
+      "Epoch  50 Batch    0/1   train_loss = 3.907\n",
+      "Epoch  60 Batch    0/1   train_loss = 3.203\n",
+      "Epoch  70 Batch    0/1   train_loss = 2.766\n",
+      "Epoch  80 Batch    0/1   train_loss = 2.391\n",
+      "Epoch  90 Batch    0/1   train_loss = 2.102\n",
+      "Epoch 100 Batch    0/1   train_loss = 1.828\n",
+      "Epoch 110 Batch    0/1   train_loss = 1.615\n",
+      "Epoch 120 Batch    0/1   train_loss = 1.458\n",
+      "Epoch 130 Batch    0/1   train_loss = 1.332\n",
+      "Epoch 140 Batch    0/1   train_loss = 1.255\n",
+      "Epoch 150 Batch    0/1   train_loss = 1.202\n",
+      "Epoch 160 Batch    0/1   train_loss = 1.171\n",
+      "Epoch 170 Batch    0/1   train_loss = 1.150\n",
+      "Epoch 180 Batch    0/1   train_loss = 1.137\n",
+      "Epoch 190 Batch    0/1   train_loss = 1.129\n",
+      "Epoch 200 Batch    0/1   train_loss = 1.123\n",
+      "Epoch 210 Batch    0/1   train_loss = 1.118\n",
+      "Epoch 220 Batch    0/1   train_loss = 1.115\n",
+      "Epoch 230 Batch    0/1   train_loss = 1.113\n",
+      "Epoch 240 Batch    0/1   train_loss = 1.111\n",
+      "Epoch 250 Batch    0/1   train_loss = 1.109\n",
+      "Epoch 260 Batch    0/1   train_loss = 1.108\n",
+      "Epoch 270 Batch    0/1   train_loss = 1.106\n",
+      "Epoch 280 Batch    0/1   train_loss = 1.105\n",
+      "Epoch 290 Batch    0/1   train_loss = 1.105\n",
+      "Epoch 300 Batch    0/1   train_loss = 1.104\n",
+      "Epoch 310 Batch    0/1   train_loss = 1.103\n",
+      "Epoch 320 Batch    0/1   train_loss = 1.103\n",
+      "Epoch 330 Batch    0/1   train_loss = 1.102\n",
+      "Epoch 340 Batch    0/1   train_loss = 1.102\n",
+      "Epoch 350 Batch    0/1   train_loss = 1.101\n",
+      "Epoch 360 Batch    0/1   train_loss = 1.101\n",
+      "Epoch 370 Batch    0/1   train_loss = 1.101\n",
+      "Epoch 380 Batch    0/1   train_loss = 1.101\n",
+      "Epoch 390 Batch    0/1   train_loss = 1.100\n",
+      "Epoch 400 Batch    0/1   train_loss = 1.100\n",
+      "Epoch 410 Batch    0/1   train_loss = 1.100\n",
+      "Epoch 420 Batch    0/1   train_loss = 1.100\n",
+      "Epoch 430 Batch    0/1   train_loss = 1.100\n",
+      "Epoch 440 Batch    0/1   train_loss = 1.099\n",
+      "Epoch 450 Batch    0/1   train_loss = 1.107\n",
+      "Epoch 460 Batch    0/1   train_loss = 2.572\n",
+      "Epoch 470 Batch    0/1   train_loss = 1.314\n",
+      "Epoch 480 Batch    0/1   train_loss = 0.884\n",
+      "Epoch 490 Batch    0/1   train_loss = 0.715\n",
       "Model Trained and Saved\n"
      ]
     }
@@ -896,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -923,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -963,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1008,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1054,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1065,32 +1093,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moe_szyslak:() i don't you got a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:(to give you don't have a.\n",
-      "homer_simpson:\n"
+      "moe_szyslak:(amid men's you, moe.\n",
+      "moe_szyslak:(sings) i believe in youse...(nervous)\n",
+      "homer_simpson:(chuckles) oh, thank god, the pressure's off.\n",
+      "moe_szyslak: there sure is a lotta talkin' for a professional fight.\n",
+      "lenny_leonard: eh, that's me! i--(beat) one, man...\n",
+      "\n",
+      "\n",
+      "moe_szyslak: hey, hey, hey, hey! that was the world of a lot of that me.\n",
+      "homer_simpson: i had to get edna out of the game, springfield stadium i know, i love, i just donated twenty dollars to you.\n",
+      "moe_szyslak: what?\n",
+      "homer_simpson: i see the poster boy for the new guy.\n",
+      "moe_szyslak:(looking around, upset) about you! are you thinking what you hear it.\n",
+      "moe_szyslak:(to little man) come on i know.\n",
+      "moe_szyslak: i got is this old stuff here.\n",
+      "moe_szyslak: hey, hey, no. not tonight!\n",
+      "moe_szyslak:(sings) i believe in youse...(belches)\n",
+      "moe_szyslak:(sniffles, then, impatient) if they was me they'd be done by now.\n",
+      "\n",
+      "\n",
+      "moe_szyslak: hey, homer, you wanna try my new vance connor-politan? like, uh, i got no one behind on the outside, but you see.\n",
+      "homer_simpson: you guys are right--\n",
+      "moe_szyslak: well, i--(sighs) i must the only one guy who the way to find out.\n",
+      "moe_szyslak: uh, time was, here.(turns to homer) hey, oh, who wants to party?!\n",
+      "moe_szyslak:(on phone) hello maggie.... hello maggie.\n",
+      "carl_carlson:(calling out) hey, krusty, what are you talking about? i, i thought you said those guys were creeps!\n",
+      "krusty_the_clown: yeah, but that was before i got to know 'em. they're...\n",
+      "homer_simpson:(grim) the call of the\" flaming moe\" is for the best year of my life: nineteen ninety-six.\n",
+      "carl_carlson: my name, and i'm magnanimous in.\n",
+      "moe_szyslak: oh, right! i really don't want to feed you.\n",
+      "young_marge: i want some of that.\n",
+      "moe_szyslak:(sings) i've been working on the railroad / all the live long day...(then) yeah, that's better.\n",
+      "homer_simpson:(laughs) now, you know, two, that i sell the world?\n",
+      "carl_carlson: uh, time.................\n",
+      "rev. i guess carl.\n",
+      "carl_carlson: hey\n"
      ]
     }
    ],
    "source": [
-    "gen_length = 200\n",
+    "gen_length = 500\n",
     "# homer_simpson, moe_szyslak, or Barney_Gumble\n",
     "prime_word = 'moe_szyslak'\n",
     "\n",
@@ -1151,10 +1193,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:py35]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-py35-py"
   },
   "language_info": {
    "codemirror_mode": {
