--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -322,7 +322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.0.0\n",
+      "TensorFlow Version: 1.1.0\n",
       "Default GPU Device: /gpu:0\n"
      ]
     }
@@ -1195,9 +1195,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:py35]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-py35-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
