Frozen Lake Coded

--- a/my-experiments/reinforcement learning/RL Car Race.ipynb
+++ b/my-experiments/reinforcement learning/RL Car Race.ipynb
@@ -36,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-07-04 22:17:30,689] Making new env: CarRacing-v0\n"
+      "[2017-07-04 23:55:00,354] Making new env: CarRacing-v0\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -153,7 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.33926044  0.18015212  0.28452352]\n"
+      "[ 0.09762701  0.71518937  0.60276338]\n"
      ]
     }
    ],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -246,28 +246,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Track generation: 1081..1355 -> 274-tiles track\n",
-      "episode:1 frames:1000 total rewards:-26.739926739927068 epsilon:1\n",
-      "Track generation: 1265..1585 -> 320-tiles track\n",
-      "episode:2 frames:1000 total rewards:-37.30407523511034 epsilon:0.999\n",
-      "Track generation: 1178..1476 -> 298-tiles track\n",
-      "episode:3 frames:1000 total rewards:-32.65993265993308 epsilon:0.997002999\n",
-      "Track generation: 1059..1331 -> 272-tiles track\n",
-      "retry to generate track (normal if there are not many of this messages)\n",
-      "Track generation: 1199..1503 -> 304-tiles track\n",
-      "episode:4 frames:1000 total rewards:-30.69306930693117 epsilon:0.993020965034979\n",
-      "Track generation: 1139..1428 -> 289-tiles track\n",
-      "episode:5 frames:1000 total rewards:-30.555555555555976 epsilon:0.9851045463620021\n",
-      "Track generation: 1118..1402 -> 284-tiles track\n",
-      "episode:6 frames:1000 total rewards:-29.328621908127598 epsilon:0.9694605362958227\n",
+      "Track generation: 1262..1578 -> 316-tiles track\n",
+      "episode:1 frames:1000 total rewards:-39.68253968254033 epsilon:1\n",
       "Track generation: 1171..1468 -> 297-tiles track\n",
-      "episode:7 frames:1000 total rewards:-29.054054054054443 epsilon:0.9389138777035492\n",
-      "Track generation: 1139..1428 -> 289-tiles track\n",
-      "episode:8 frames:1000 total rewards:-27.083333333333627 epsilon:0.880677710474571\n",
-      "Track generation: 1113..1403 -> 290-tiles track\n",
-      "episode:9 frames:1000 total rewards:-10.034602076124358 epsilon:0.7748176364970055\n",
-      "Track generation: 1320..1654 -> 334-tiles track\n",
-      "episode:10 frames:1000 total rewards:-39.939939939940196 epsilon:0.599742027456979\n"
+      "episode:2 frames:1000 total rewards:-29.054054054054426 epsilon:0.999\n",
+      "Track generation: 1228..1539 -> 311-tiles track\n",
+      "episode:3 frames:1000 total rewards:-35.48387096774241 epsilon:0.997002999\n",
+      "Track generation: 1136..1424 -> 288-tiles track\n",
+      "episode:4 frames:1000 total rewards:-33.79790940766605 epsilon:0.993020965034979\n",
+      "Track generation: 1177..1475 -> 298-tiles track\n",
+      "episode:5 frames:1000 total rewards:-39.393939393939995 epsilon:0.9851045463620021\n",
+      "Track generation: 1472..1843 -> 371-tiles track\n",
+      "episode:6 frames:1000 total rewards:-45.94594594594669 epsilon:0.9694605362958227\n",
+      "Track generation: 1217..1535 -> 318-tiles track\n",
+      "episode:7 frames:1000 total rewards:-43.21766561514266 epsilon:0.9389138777035492\n",
+      "Track generation: 1127..1413 -> 286-tiles track\n",
+      "episode:8 frames:1000 total rewards:-40.350877192983106 epsilon:0.880677710474571\n",
+      "Track generation: 1180..1479 -> 299-tiles track\n",
+      "episode:9 frames:1000 total rewards:-53.0201342281887 epsilon:0.7748176364970055\n",
+      "Track generation: 1107..1396 -> 289-tiles track\n",
+      "episode:10 frames:1000 total rewards:-23.611111111111303 epsilon:0.599742027456979\n"
      ]
     }
    ],
@@ -304,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -313,9 +311,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Track generation: 1330..1667 -> 337-tiles track\n",
+      "Track generation: 1060..1329 -> 269-tiles track\n",
       "(96, 96, 3)\n",
-      "[[ 0.34014112  0.63787138  0.36077744]]\n"
+      "[[ 0.39381853  0.61909968  0.60351008]]\n"
      ]
     }
    ],
@@ -325,6 +323,15 @@
     "action = bot_racer.predict(np.reshape(state, [1, state.shape[0], state.shape[1], state.shape[2]]))\n",
     "print(action)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
